refactor jwtfilter and added token failure reasons